# Rainbow-Print

./: setup.cfg
src/rainbow_print/: rainbow_print.py
