[metadata]
name = rainbow-print-thomas-xin
version = 0.0.1
author = Thomas Xin
author_email = thomasxin@gmail.com
description = A simple override causing the terminal to cycle through 6 colours.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thomas-xin/Rainbow-Print
project_urls =
    Bug Tracker = https://github.com/thomas-xin/Rainbow-Print/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4

[options.packages.find]
where = src